--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
 @import "screen-header.css";
 @import "friends.css";
 @import "user-component.css";
+@import "badge.css";
+@import "find.css";
+@import "icon-row.css";
+@import "more.css";
+
 
 body{
     font-family: "Open Sans", sans-serif;
@@ -31,4 +36,6 @@ body{
     width: 60%;
     opacity: 0.7;
 }
-
+.main-screen {
+    padding: var(--horizontal-space);
+}
