--- a/user-component.css
+++ b/user-component.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+.user-component{
+    justify-content: space-between;
+}
+
 .user-component ,
 .user-component__column:first-child {
     display: flex;
@@ -25,6 +29,42 @@
     color: rgba(0,0 ,0 ,0.5);
 }
 
-,.user-component__avatar--xl {
+.user-component__avatar--xl {
+    width: 80px;
+    height: 80px;
+}
 
+.user-component__avatar--sm{
+    width: 60px;
+    height: 60px;
+    border-radius: 25px;
+}
+
+.user-component__title--not-bold {
+    font-weight: 400;
+}
+
+.friends-screen__channel {
+    margin-top: 25px;
+    border-top: 1px solid rgba(0,0 ,0 ,0.2);
+    padding-top: 15px;
+}
+
+.friends-creen__channel-header {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    color: rgba(0,0 ,0 ,0.5);
+}
+
+.user-component__column:last-child {
+    color: rgba(0,0 ,0 ,0.4);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.user-component__time {
+    margin-bottom: 5px;
+    display: block;
 }
